// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column extra details 1`] = `
<alarm-column-value-extra-details-stub
  alarm="[object Object]"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column impact state 1`] = `
<color-indicator-wrapper-stub
  alarm="[object Object]"
  entity="[object Object]"
  type="impact_state"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column links 1`] = `
<c-alarm-links-chips-stub
  alarm="[object Object]"
  class="my-1"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column links category 1`] = `
<c-alarm-links-chips-stub
  alarm="[object Object]"
  category="test"
  class="my-1"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column links only icon 1`] = `
<c-alarm-links-chips-stub
  alarm="[object Object]"
  class="my-1"
  onlyicon="true"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column links with inline links count 1`] = `
<c-alarm-links-chips-stub
  alarm="[object Object]"
  class="my-1"
  inlinecount="2"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column state 1`] = `<c-alarm-state-chip-stub />`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with column status 1`] = `
<alarm-column-value-status-stub
  alarm="[object Object]"
/>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with invalid html 1`] = `
<div>
  <div />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups 1`] = `
<div
  class="v-menu alarms-column-cell"
>
  <transition-stub
    name="v-menu-transition"
  />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <alarm-column-cell-popup-body-stub
    alarm="[object Object]"
    selectedtag=""
    template="template"
    templateid="-widgetColumns-v.display_name-popupTemplate"
  />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups after hide 1`] = `
<div
  class="v-menu alarms-column-cell"
>
  <transition-stub
    name="v-menu-transition"
  />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups after hide 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <alarm-column-cell-popup-body-stub
    alarm="[object Object]"
    selectedtag=""
    template="template"
    templateid="-widgetColumns-v.display_name-popupTemplate"
  />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups and html 1`] = `
<div
  class="v-menu alarms-column-cell"
>
  <transition-stub
    name="v-menu-transition"
  />
</div>
`;

exports[`alarm-column-cell Renders \`alarm-column-cell\` with popups and html 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <alarm-column-cell-popup-body-stub
    alarm="[object Object]"
    selectedtag=""
    template="template"
    templateid="-widgetColumns-entity.name-popupTemplate"
  />
</div>
`;
